
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#66CCFF"
    tools:context=".Home"  >
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/disp"
        android:inputType="numberDecimal"
        android:id = "@+id/display"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/seven"
            android:text="@string/seven"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/eight"
            android:text="@string/eight"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/nine"
            android:text="@string/nine"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/div"
            android:text="@string/div"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/four"
            android:text="@string/four"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/five"
            android:text="@string/five"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/six"
            android:text="@string/six"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/mul"
            android:text="@string/mul"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/one"
            android:text="@string/one"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/two"
            android:text="@string/two"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/three"
            android:text="@string/three"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/sub"
            android:text="@string/sub"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20dp">
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/cancel"
            android:text="@string/cancel"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/zero"
            android:text="@string/zero"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/equal"
            android:text="@string/equal"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
        <Button
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:id = "@+id/add"
            android:text="@string/add"
            android:textColor="#0000CC"
            android:background="#FFFFFF"/>
    </LinearLayout>
</LinearLayout>



